--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-    
+  <section class="container principal"  >
 <img src="img/Group 28.png" alt="O combo+ é a junção do Açura+ e o Alura língua">
+</section>
 </body>
 
 </html>
